[package]
name = "rtspy-bridge2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.24.4"
gstreamer-webrtc = "0.24.4"
gstreamer-sdp = "0.24.4"
glib = "0.21.5"
futures = "0.3"
hyper = "1.8.1"
warp = { version = "0.4.2", features = ["websocket", "server"] }
anyhow = "1.0.102"
gstreamer-rtsp = "0.24.4"
gstreamer-rtp = "0.25.0"
