[package]
name = "rtspi-guard-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
glib = "0.21.5"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-rtsp-server = "0.24.4"
gstreamer-video = "0.24.4"
once_cell = "1.21.3"
opencv = { version = "0.98.1" }
tokio-stream = "0.1.18"
